feat: add examples

--- a/openai_compatible_examples/requirements.txt
+++ b/openai_compatible_examples/requirements.txt
@@ -1,9 +1,12 @@
 openai
 requests
+aiohttp
 python-dotenv
+tenacity
 langchain
 llama-index
 
 # Potentially add more specific framework packages later, e.g.:
 langchain-openai
-llama-index-llms-openai 
+llama-index-llms-openai
+llama-index-llms-openai-like 
