feat: add more examples

--- a/openai_compatible_examples/requirements.txt
+++ b/openai_compatible_examples/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv
 tenacity
 langchain
 llama-index
+matplotlib
 
 # Potentially add more specific framework packages later, e.g.:
 langchain-openai
