feat: add pdf util

--- a/openai_compatible_examples/requirements.txt
+++ b/openai_compatible_examples/requirements.txt
@@ -6,6 +6,8 @@ tenacity
 langchain
 llama-index
 matplotlib
+PyMuPDF
+reportlab
 
 # Potentially add more specific framework packages later, e.g.:
 langchain-openai
